# RMGripper

./: README.md
ArduinoFiles/ArduinoPCserial/: CMakeLists.txt  Serial.cpp  Serial.h  easy_serial.h  echo.cpp
ArduinoFiles/ArduinoPCserial/serial_test/: serial_test.ino
ArduinoFiles/TimerWaveGen/: TimerWaveGen.ino
ArduinoFiles/electric-magnet/: electric-magnet.ino
AutoPlugin/: CMakeLists.txt  Result.txt  cal.txt  calibration_imgCapture.cpp  color_picker.cpp  main.cpp  record.txt  test.cpp  virtual_paint.cpp
AutoPlugin/calibration/: img_sequence.txt  pose.txt  rpy.txt  tcpPose.txt  tcpPose2.txt
AutoPlugin/camera/: calibration_params.yml  realsense_calibration_params.yml
AutoPlugin/include/: gripper_driver.h
AutoPlugin/src/: gripper_driver.cpp
GripperControl/RmServo/Source/: dataExchange.cpp  main.cpp  pidctrl.cpp  rmctrl.cpp  servo.cpp
GripperControl/RmServo/include/: servo.h
GripperControl/RmServo/include/opencv2/core/: base.hpp
GripperControl/RmaxisSDK/: CMakeLists.txt  RMAxis.cpp  main.cpp
GripperControl/RmaxisSDK/Source/: SCS.cpp  SCSCL.cpp  SCSerial.cpp  SMSBL.cpp  SMSCL.cpp  Serial.cpp  WriteSMPostion.cpp  controlPanel.cpp
GripperControl/RmaxisSDK/lib/: Serial.h  controlPanel.h
RotatingMotorControl/SMSBL/: CMakeLists.txt  SCSerial.cpp  main.cpp
stm32/: PCserial
stm32/integrate1.0/: .mxproject  Makefile  readme.md  servo5.ioc
stm32/integrate1.0/Core/Inc/: SMSBCL.h  printf.h  usart.h
stm32/integrate1.0/Core/Src/: SCSerail.c  SMSBCL.c  WritePos.c  gpio.c  main.c  printf.c  stm32f4xx_it.c  tim.c  usart.c
stm32/pc/: CMakeLists.txt  Makefile  Serial.cpp  Serial.h  main.cpp  readme.md
